--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html lang="ru">
 	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Максим Халласаар</title>
 
-		<link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico">
-		<link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico">
-		<link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/img/favicon/favicon-16x16.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/img/favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/img/favicon/favicon-96x96.png">
-		<link rel="icon" type="image/png" sizes="120x120" href="%PUBLIC_URL%/img/favicon/favicon-120x120.png">
-		<link rel="icon" type="image/png" sizes="192x192"  href="%PUBLIC_URL%/img/favicon/android-icon-192x192.png">
-		<link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/img/favicon/apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/img/favicon/apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/img/favicon/apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/img/favicon/apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/img/favicon/apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/img/favicon/apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/img/favicon/apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/img/favicon/apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/img/favicon/apple-icon-180x180.png">
-		<link rel="mask-icon" type="image/x-icon" color="#ffffff" href="%PUBLIC_URL%/img/favicon/favicon.svg">
-		<meta name="theme-color" content="#ffffff">
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-		<meta name="msapplication-TileColor" content="#ffffff">
-		<meta name="msapplication-TileImage" content="%PUBLIC_URL%/img/favicon/ms-icon-144x144.png">
-		<meta name="msapplication-config" content="%PUBLIC_URL%/browserconfig.xml">
+		<link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/img/favicon/favicon-16x16.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/img/favicon/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/img/favicon/favicon-96x96.png" />
+		<link rel="icon" type="image/png" sizes="120x120" href="%PUBLIC_URL%/img/favicon/favicon-120x120.png" />
+		<link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/img/favicon/android-icon-192x192.png" />
+		<link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/img/favicon/apple-icon-57x57.png" />
+		<link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/img/favicon/apple-icon-60x60.png" />
+		<link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/img/favicon/apple-icon-72x72.png" />
+		<link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/img/favicon/apple-icon-76x76.png" />
+		<link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/img/favicon/apple-icon-114x114.png" />
+		<link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/img/favicon/apple-icon-120x120.png" />
+		<link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/img/favicon/apple-icon-144x144.png" />
+		<link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/img/favicon/apple-icon-152x152.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/img/favicon/apple-icon-180x180.png" />
+		<link rel="mask-icon" type="image/x-icon" color="#ffffff" href="%PUBLIC_URL%/img/favicon/favicon.svg" />
+		<meta name="theme-color" content="#ffffff" />
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<meta name="msapplication-TileColor" content="#ffffff" />
+		<meta name="msapplication-TileImage" content="%PUBLIC_URL%/img/favicon/ms-icon-144x144.png" />
+		<meta name="msapplication-config" content="%PUBLIC_URL%/browserconfig.xml" />
 	</head>
+
 	<body>
 		<noscript>У Вас отключён JavaScript. Пожалуйста, зайдите в настройки браузера и включите его.</noscript>
-		
+
 		<div id="root"></div>
 	</body>
 </html>
