--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" class="html">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -29,7 +29,7 @@
 		<meta name="msapplication-config" content="%PUBLIC_URL%/browserconfig.xml" />
 	</head>
 
-	<body>
+	<body class="body">
 		<noscript>У Вас отключён JavaScript. Пожалуйста, зайдите в настройки браузера и включите его.</noscript>
 
 		<div id="root"></div>
