Deleted test block on the 'Header'

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/img/favicon/apple-icon-180x180.png" />
 		<link rel="mask-icon" type="image/x-icon" color="#ffffff" href="%PUBLIC_URL%/img/favicon/favicon.svg" />
 		<meta name="theme-color" content="#ffffff" />
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link rel="manifest" href="%PUBLIC_URL%/app.webmanifest" />
 		<meta name="msapplication-TileColor" content="#ffffff" />
 		<meta name="msapplication-TileImage" content="%PUBLIC_URL%/img/favicon/ms-icon-144x144.png" />
 		<meta name="msapplication-config" content="%PUBLIC_URL%/browserconfig.xml" />
