The 'react-router-dom' plugin has been added in the project. Fixed a bug where all pages would display the full header instead of displaying the regular 'Navbar'

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,6 @@
 	<body class="body">
 		<noscript>У Вас отключён JavaScript. Пожалуйста, зайдите в настройки браузера и включите его.</noscript>
 
-		<div id="root"></div>
+		<div id="root" class="root"></div>
 	</body>
 </html>
